--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         pre {
             white-space: pre-wrap;
             word-wrap: break-word;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
     </style>
 </head>
@@ -58,6 +59,7 @@
         <hr>
         <pre>
 Lantern Lead Gen Client Agreement
+
 This Agreement (“Agreement”) is entered into by and between Lantern Lead Gen, a lead generation service (“Company”), and the undersigned certified life coach (“Client”).
 
 I. Appointment and Scope of Services
@@ -129,18 +131,4 @@ This Agreement constitutes the entire understanding between the parties and supe
 XIV. Signatures
 Lantern Lead Gen
 By: ________________________________
-Name: Joseph Browning
-Title: Founder
-Date: ______________________________
-
-Client (Life Coach)
-By: _______________________________
-Name: ____________________________
-Date: _____________________________
-        </pre>
-    </main>
-    <footer>
-        &copy; 2025 Lantern Lead Gen. All rights reserved.
-    </footer>
-</body>
-</html>
+Name:
