--- a/index.html
+++ b/index.html
@@ -34,101 +34,4 @@
             margin: 20px 0;
         }
         ul {
-            padding-left: 20px;
-        }
-        footer {
-            text-align: center;
-            font-size: 0.9em;
-            color: #666;
-            margin-top: 40px;
-        }
-        pre {
-            white-space: pre-wrap;
-            word-wrap: break-word;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Client Agreement</h1>
-        <p>Lantern Lead Gen</p>
-    </header>
-    <main>
-        <p><strong>Effective Date:</strong> July 20, 2025</p>
-        <hr>
-        <pre>
-Lantern Lead Gen Client Agreement
-
-This Agreement (“Agreement”) is entered into by and between Lantern Lead Gen, a lead generation service (“Company”), and the undersigned certified life coach (“Client”).
-
-I. Appointment and Scope of Services
-Client hereby engages Lantern Lead Gen to provide lead generation services that connect the Client with individuals who have expressed interest in life coaching services through TikTok creator campaigns. Lantern Lead Gen will deliver leads via secure digital means and provide campaign-specific tracking and reporting.
-
-II. Services Provided by Lantern Lead Gen
-Lantern Lead Gen agrees to:
-• Build and maintain custom-branded lead intake pages for TikTok creators.
-• Collect and securely store lead data including name, email, phone number, city/state, timestamp, and campaign source.
-• Deliver qualified leads to the Client in real-time or batch format.
-• Monitor compliance through test leads and revocation audits.
-
-III. Client Responsibilities
-The Client agrees to:
-• Contact leads only between 8:00 AM and 9:00 PM local time of the recipient.
-• Scrub all leads against the National Do Not Call (DNC) Registry prior to outreach.
-• Honor opt-out and revocation requests within 10 business days.
-• Maintain accurate records of outreach and consent status.
-• Use leads exclusively for offering life coaching services.
-• Not resell, share, or transfer lead data to any third party.
-
-IV. Consent and Compliance
-The Client acknowledges that:
-• All leads have provided affirmative consent via an unchecked checkbox and clear language in the Privacy Policy.
-• Consent includes permission to be contacted via phone, email, or SMS by a certified life coach.
-• Lantern Lead Gen maintains records of consent, including timestamp, checkbox status, campaign ID, and policy version.
-• The Client must comply with all applicable FCC, TCPA, and state-level telemarketing laws.
-
-V. Monitoring and Enforcement
-Lantern Lead Gen reserves the right to:
-• Submit test (“dummy”) leads to monitor compliance.
-• Audit the Client’s outreach practices and consent handling.
-• Suspend or terminate lead access for violations of this Agreement or applicable laws.
-• Report violations to regulatory authorities if necessary.
-
-VI. Data Security
-The Client agrees to:
-• Store lead data in secure, access-controlled environments.
-• Limit access to authorized personnel only.
-• Notify Lantern Lead Gen immediately in the event of a data breach.
-
-VII. Fees and Payment
-• The Client agrees to pay fees as outlined in a separate pricing schedule or invoice.
-• Payment terms may be per lead, per campaign, or subscription based.
-
-VIII. Term and Termination
-• This Agreement remains in effect until terminated by either party with 10 days’ written notice.
-• Lantern Lead Gen may terminate immediately for cause, including non-compliance or misuse of lead data.
-
-IX. Limitation of Liability
-Lantern Lead Gen is not liable for:
-• The outcome of any contact made with a lead.
-• Any legal claims arising from the Client’s misuse of lead data or non-compliance with laws.
-
-X. Indemnification
-The Client agrees to indemnify and hold harmless Lantern Lead Gen from any claims, damages, or legal actions arising from:
-• The Client’s use of the leads.
-• Violations of this Agreement or applicable laws.
-
-XI. Confidentiality
-Both parties agree to maintain the confidentiality of all non-public information and not disclose it to third parties except as required by law.
-
-XII. Governing Law
-This Agreement shall be governed by the laws of the State of Ohio, without regard to conflict of law principles.
-
-XIII. Entire Agreement
-This Agreement constitutes the entire understanding between the parties and supersedes all prior agreements. Amendments must be in writing and signed by both parties.
-
-XIV. Signatures
-Lantern Lead Gen
-By: ________________________________
-Name:
+            padding
