--- a/index.html
+++ b/index.html
@@ -34,4 +34,156 @@
             margin: 20px 0;
         }
         ul {
-            padding
+            padding-left: 20px;
+        }
+        footer {
+            text-align: center;
+            font-size: 0.9em;
+            color: #666;
+            margin-top: 40px;
+        }
+        .section {
+            margin-bottom: 30px;
+        }
+        .signature-block {
+            margin-top: 40px;
+        }
+        .signature-line {
+            margin: 20px 0;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Client Agreement</h1>
+        <p>Lantern Lead Gen</p>
+    </header>
+    <main>
+        <p><strong>Effective Date:</strong> July 20, 2025</p>
+        <hr>
+
+        <div class="section">
+            <h2>I. Appointment and Scope of Services</h2>
+            <p>Client hereby engages Lantern Lead Gen to provide lead generation services that connect the Client with individuals who have expressed interest in life coaching services through TikTok creator campaigns. Lantern Lead Gen will deliver leads via secure digital means and provide campaign-specific tracking and reporting.</p>
+        </div>
+
+        <div class="section">
+            <h2>II. Services Provided by Lantern Lead Gen</h2>
+            <ul>
+                <li>Build and maintain custom-branded lead intake pages for TikTok creators.</li>
+                <li>Collect and securely store lead data including name, email, phone number, city/state, timestamp, and campaign source.</li>
+                <li>Deliver qualified leads to the Client in real-time or batch format.</li>
+                <li>Monitor compliance through test leads and revocation audits.</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>III. Client Responsibilities</h2>
+            <ul>
+                <li>Contact leads only between 8:00 AM and 9:00 PM local time of the recipient.</li>
+                <li>Scrub all leads against the National Do Not Call (DNC) Registry prior to outreach.</li>
+                <li>Honor opt-out and revocation requests within 10 business days.</li>
+                <li>Maintain accurate records of outreach and consent status.</li>
+                <li>Use leads exclusively for offering life coaching services.</li>
+                <li>Not resell, share, or transfer lead data to any third party.</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>IV. Consent and Compliance</h2>
+            <ul>
+                <li>All leads have provided affirmative consent via an unchecked checkbox and clear language in the Privacy Policy.</li>
+                <li>Consent includes permission to be contacted via phone, email, or SMS by a certified life coach.</li>
+                <li>Lantern Lead Gen maintains records of consent, including timestamp, checkbox status, campaign ID, and policy version.</li>
+                <li>The Client must comply with all applicable FCC, TCPA, and state-level telemarketing laws.</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>V. Monitoring and Enforcement</h2>
+            <ul>
+                <li>Submit test (“dummy”) leads to monitor compliance.</li>
+                <li>Audit the Client’s outreach practices and consent handling.</li>
+                <li>Suspend or terminate lead access for violations of this Agreement or applicable laws.</li>
+                <li>Report violations to regulatory authorities if necessary.</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>VI. Data Security</h2>
+            <ul>
+                <li>Store lead data in secure, access-controlled environments.</li>
+                <li>Limit access to authorized personnel only.</li>
+                <li>Notify Lantern Lead Gen immediately in the event of a data breach.</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>VII. Fees and Payment</h2>
+            <ul>
+                <li>The Client agrees to pay fees as outlined in a separate pricing schedule or invoice.</li>
+                <li>Payment terms may be per lead, per campaign, or subscription based.</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>VIII. Term and Termination</h2>
+            <ul>
+                <li>This Agreement remains in effect until terminated by either party with 10 days’ written notice.</li>
+                <li>Lantern Lead Gen may terminate immediately for cause, including non-compliance or misuse of lead data.</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>IX. Limitation of Liability</h2>
+            <ul>
+                <li>Lantern Lead Gen is not liable for the outcome of any contact made with a lead.</li>
+                <li>Lantern Lead Gen is not liable for any legal claims arising from the Client’s misuse of lead data or non-compliance with laws.</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>X. Indemnification</h2>
+            <ul>
+                <li>The Client agrees to indemnify and hold harmless Lantern Lead Gen from any claims, damages, or legal actions arising from the Client’s use of the leads.</li>
+                <li>Violations of this Agreement or applicable laws.</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>XI. Confidentiality</h2>
+            <p>Both parties agree to maintain the confidentiality of all non-public information and not disclose it to third parties except as required by law.</p>
+        </div>
+
+        <div class="section">
+            <h2>XII. Governing Law</h2>
+            <p>This Agreement shall be governed by the laws of the State of Ohio, without regard to conflict of law principles.</p>
+        </div>
+
+        <div class="section">
+            <h2>XIII. Entire Agreement</h2>
+            <p>This Agreement constitutes the entire understanding between the parties and supersedes all prior agreements. Amendments must be in writing and signed by both parties.</p>
+        </div>
+
+        <div class="section signature-block">
+            <h2>XIV. Signatures</h2>
+            <div class="signature-line">
+                <strong>Lantern Lead Gen</strong><br>
+                By: ________________________________<br>
+                Name: Joseph Browning<br>
+                Title: Founder<br>
+                Date: ______________________________
+            </div>
+            <div class="signature-line">
+                <strong>Client (Life Coach)</strong><br>
+                By: _______________________________<br>
+                Name: ____________________________<br>
+                Date: _____________________________
+            </div>
+        </div>
+    </main>
+    <footer>
+        &copy; 2025 Lantern Lead Gen. All rights reserved.
+    </footer>
+</body>
+</html>
